--- a/Makefile.am
+++ b/Makefile.am
@@ -1,1 +1,8 @@
+## Process this file with automake to produce Makefile.in
+
 dist_pkgdata_DATA = serviceproviders.xml serviceproviders.dtd
+
+EXTRA_DIST = mobile-broadband-provider-info.pc.in
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = mobile-broadband-provider-info.pc
