--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,8 @@
-AC_INIT([mobile-broadband-provider-info], [20080721])
+AC_INIT([mobile-broadband-provider-info], [20080725])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 
 AC_CONFIG_FILES([
 	Makefile
+	mobile-broadband-provider-info.pc
 ])
 AC_OUTPUT
