add an autogen.sh; clean up configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,8 @@
-AC_INIT([mobile-broadband-provider-info], [20090309])
+AC_PREREQ(2.52)
+
+AC_INIT(mobile-broadband-provider-info, 20090309, antti@kaijanmaki.net, mobile-broadband-provider-info)
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
+AM_MAINTAINER_MODE
 
 AC_CONFIG_FILES([
 	Makefile
