--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 AC_PREREQ(2.52)
 
-AC_INIT(mobile-broadband-provider-info, 20090309, antti@kaijanmaki.net, mobile-broadband-provider-info)
-AM_INIT_AUTOMAKE([-Wall -Werror foreign])
+AC_INIT(mobile-broadband-provider-info, 20090602, antti@kaijanmaki.net, mobile-broadband-provider-info)
+AM_INIT_AUTOMAKE([-Wall -Werror foreign no-dist-gzip dist-bzip2])
 AM_MAINTAINER_MODE
 
 AC_CONFIG_FILES([
