--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,14 @@
 ## Process this file with automake to produce Makefile.in
 
-dist_pkgdata_DATA = serviceproviders.xml serviceproviders.dtd
+SP_XML_DB = serviceproviders.xml
+
+dist_pkgdata_DATA = $(SP_XML_DB) serviceproviders.2.dtd
 
 EXTRA_DIST = mobile-broadband-provider-info.pc.in
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = mobile-broadband-provider-info.pc
+
+check-local:
+	xmllint --valid $(top_srcdir)/$(SP_XML_DB) 2>&1 > /dev/null || exit 1;
+
