--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ(2.52)
 
 AC_INIT(mobile-broadband-provider-info, 20110511, dcbw@redhat.com, mobile-broadband-provider-info)
 AM_INIT_AUTOMAKE([-Wall -Werror foreign no-dist-gzip dist-bzip2])
-AM_MAINTAINER_MODE
+AM_MAINTAINER_MODE([enable])
 
 AC_CONFIG_FILES([
 	Makefile
