--- a/mobile-broadband-provider-info.pc.in
+++ b/mobile-broadband-provider-info.pc.in
@@ -1,6 +1,6 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
-libdir=@libdir
+libdir=@libdir@
 datarootdir = @datarootdir@
 pkgdatadir=${datarootdir}/@PACKAGE@
 includedir=@includedir@
