--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,9 @@
 AC_PREREQ(2.52)
 
-AC_INIT(mobile-broadband-provider-info, 20190116, dcbw@redhat.com, mobile-broadband-provider-info)
+AC_INIT(mobile-broadband-provider-info,
+	20190116,
+	[https://gitlab.gnome.org/GNOME/mobile-broadband-provider-info/issues],
+	mobile-broadband-provider-info)
 AM_INIT_AUTOMAKE([-Wall -Werror foreign no-dist-gzip dist-bzip2])
 AM_MAINTAINER_MODE([enable])
 
