--- a/configure.ac
+++ b/configure.ac
@@ -4,7 +4,7 @@ AC_INIT(mobile-broadband-provider-info,
 	20190116,
 	[https://gitlab.gnome.org/GNOME/mobile-broadband-provider-info/issues],
 	mobile-broadband-provider-info)
-AM_INIT_AUTOMAKE([-Wall -Werror foreign no-dist-gzip dist-bzip2])
+AM_INIT_AUTOMAKE([-Wall -Werror foreign no-dist-gzip dist-xz])
 AM_MAINTAINER_MODE([enable])
 
 AC_PATH_PROG(XSLTPROC, xsltproc)
