ci: Add a compiler
Seems meson is more picky nowadays

Signed-off-by: Guido Günther <agx@sigxcpu.org>
Part-of: <https://gitlab.gnome.org/GNOME/mobile-broadband-provider-info/-/merge_requests/140>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ default:
     - echo "man-db man-db/auto-update boolean false" | debconf-set-selections
     - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
-    - apt-get -y install libxml2-utils xsltproc meson git
+    - apt-get -y install libxml2-utils xsltproc meson git build-essential
 
 include:
   - component: "gitlab.gnome.org/GNOME/citemplates/release-service@master"
